1.去掉一个不合理api 2.更改程序名 3.添加跳转到github的链接
